--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -6,6 +6,7 @@
   "Error": {
     "InvalidTotalTransactionAmountException": "Invalid total transaction amount exception",
     "AccountNotFoundException": "{{ type }} account of user {{ userId }} isn't found",
+    "ExceedBalanceException": "{{ type }} account of user {{ userId }} balance exceeds",
     "InsufficientBalanceException": "{{ type }} account of user {{ userId }} doesn't have sufficient balance"
   }
 }
