--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -7,7 +7,8 @@
   },
   "Error": {
     "InvalidTotalTransactionAmountException": "Invalid total transaction amount exception",
-    "AccountNotFoundException": "{{ type }} account of user {{ userId }} isn't found",
+    "UserAccountNotFoundException": "{{ type }} account of user {{ userId }} isn't found",
+    "AccountNotFoundException": "Account {{ accountId }} isn't found",
     "ExceedBalanceException": "{{ type }} account of user {{ userId }} balance exceeds",
     "InsufficientBalanceException": "{{ type }} account of user {{ userId }} doesn't have sufficient balance"
   }
